# serialization

./: .travis.yml  CMakeLists.txt  Jamfile  appveyor.yml
CMake/: CMakeLists.txt
CMake/build-static/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
CMake/build-static/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  RUN_TESTS_postBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
CMake/build-static/Debug/: test_cyclic_ptrs_text_archive
CMake/build-static/Serialization-Static.build/Debug/ZERO_CHECK.build/: Script-293DFEDD03C64DD78C45A604.sh
CMake/build-static/Serialization-Static.build/Debug/serialization.build/: serialization.dep  serialization~.dep
CMake/build-static/Serialization-Static.build/Debug/serialization.build/Objects-normal/x86_64/: archive_exception.d  basic_archive.d  basic_iarchive.d  basic_iarchive.dia  basic_iserializer.d  basic_oarchive.d  basic_oserializer.d  basic_pointer_iserializer.d  basic_pointer_oserializer.d  basic_serializer_map.d  basic_text_iprimitive.d  basic_text_iprimitive.dia  basic_text_oprimitive.d  basic_text_wiprimitive.dia  basic_xml_archive.d  binary_iarchive.d  binary_oarchive.d  binary_wiarchive.d  binary_woarchive.d  extended_type_info.d  extended_type_info_no_rtti.d  extended_type_info_typeid.d  polymorphic_iarchive.d  polymorphic_oarchive.d  serialization.LinkFileList  shared_ptr_helper.d  stl_port.d  text_iarchive.d  text_oarchive.d  text_wiarchive.d  utf8_codecvt_facet.d  void_cast.d  xml_archive_exception.d  xml_grammar.d  xml_iarchive.d  xml_oarchive.d
CMake/build-static/Serialization-Static.build/Debug/test_cyclic_ptrs_text_archive.build/: test_cyclic_ptrs_text_archive.dep  test_cyclic_ptrs_text_archive~.dep
CMake/build-static/Serialization-Static.build/Debug/test_cyclic_ptrs_text_archive.build/Objects-normal/x86_64/: A.d  test_cyclic_ptrs.d  test_cyclic_ptrs_text_archive.LinkFileList
CMake/build-static/Serialization-Static.build/Debug/test_cyclic_ptrs_xml_archive.build/: test_cyclic_ptrs_xml_archive.dep
CMake/build-static/Serialization-Static.build/Debug/test_cyclic_ptrs_xml_archive.build/Objects-normal/x86_64/: test_cyclic_ptrs.d  test_cyclic_ptrs_xml_archive.LinkFileList
CMake/build-static/Serialization-Static.build/Debug/wserialization.build/: wserialization.dep  wserialization~.dep
CMake/build-static/Serialization-Static.build/Debug/wserialization.build/Objects-normal/x86_64/: basic_text_wiprimitive.d  basic_text_woprimitive.d  codecvt_null.d  text_woarchive.d  wserialization.LinkFileList  xml_wgrammar.d  xml_wiarchive.d  xml_woarchive.d
CMake/build-static/Serialization-Static.xcodeproj/: project.pbxproj
CMake/build-static/Serialization-Static.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMake/build-static/Serialization-Static.xcodeproj/project.xcworkspace/xcuserdata/robertramey.xcuserdatad/: UserInterfaceState.xcuserstate
CMake/build-static/Serialization-Static.xcodeproj/xcuserdata/robertramey.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CMake/build-static/Serialization-Static.xcodeproj/xcuserdata/robertramey.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RUN_TESTS.xcscheme  ZERO_CHECK.xcscheme  serialization.xcscheme  test_array_binary_archive.xcscheme  test_array_text_archive.xcscheme  test_array_text_warchive.xcscheme  test_array_xml_archive.xcscheme  test_array_xml_warchive.xcscheme  test_binary_binary_archive.xcscheme  test_binary_text_archive.xcscheme  test_binary_text_warchive.xcscheme  test_binary_xml_archive.xcscheme  test_binary_xml_warchive.xcscheme  test_bitset_binary_archive.xcscheme  test_bitset_text_archive.xcscheme  test_bitset_text_warchive.xcscheme  test_bitset_xml_archive.xcscheme  test_bitset_xml_warchive.xcscheme  test_class_info_load_binary_archive.xcscheme  test_class_info_load_text_archive.xcscheme  test_class_info_load_text_warchive.xcscheme  test_class_info_load_xml_archive.xcscheme  test_class_info_load_xml_warchive.xcscheme  test_class_info_save_binary_archive.xcscheme  test_class_info_save_text_archive.xcscheme  test_class_info_save_text_warchive.xcscheme  test_class_info_save_xml_archive.xcscheme  test_class_info_save_xml_warchive.xcscheme  test_codecvt_null.xcscheme  test_complex_binary_archive.xcscheme  test_complex_text_archive.xcscheme  test_complex_text_warchive.xcscheme  test_complex_xml_archive.xcscheme  test_complex_xml_warchive.xcscheme  test_contained_class_binary_archive.xcscheme  test_contained_class_text_archive.xcscheme  test_contained_class_text_warchive.xcscheme  test_contained_class_xml_archive.xcscheme  test_contained_class_xml_warchive.xcscheme  (+210 more)
doc/: acknowledgments.html  archive_reference.html  archives.html  class_diagram.html  contents.html  dataflow.html  derivation.html  exceptions.html  extended_type_info.html  headers.html  history.html  implementation.html  overview.html  pimpl.html  private_base.html  release.html  serialization.html  shared_ptr.html  singleton.html  smart_cast.html  special.html  todo.html  traits.html  tutorial.html  void_cast.html  wrappers.html
example/: Jamfile.v2  demo_auto_ptr.cpp  demo_fast_archive.cpp  portable_binary_iarchive.cpp  portable_binary_iarchive.hpp  portable_binary_oarchive.cpp  portable_binary_oarchive.hpp  simple_log_archive.hpp
performance/: profile.sh
src/: archive_exception.cpp  basic_archive.cpp  basic_iarchive.cpp  basic_oarchive.cpp  basic_serializer_map.cpp  basic_xml_archive.cpp  basic_xml_grammar.ipp  binary_iarchive.cpp  binary_oarchive.cpp  binary_wiarchive.cpp  binary_woarchive.cpp  codecvt_null.cpp  extended_type_info.cpp  extended_type_info_no_rtti.cpp  extended_type_info_typeid.cpp  portable_iarchive.cpp  portable_oarchive.cpp  shared_ptr_helper.cpp  singleton.cpp  text_iarchive.cpp  text_oarchive.cpp  text_wiarchive.cpp  text_woarchive.cpp  utf8_codecvt_facet.cpp  void_cast.cpp  xml_archive_exception.cpp  xml_iarchive.cpp  xml_oarchive.cpp  xml_wiarchive.cpp  xml_woarchive.cpp
test/: A.cpp  A.hpp  A.ipp  B.hpp  Jamfile  Jamfile.v2  base.hpp  derived2.hpp  dll_a.cpp  dll_base.cpp  dll_derived2.cpp  (+78 more)
(+263 files in other folders)
